Avoid scrolling the whole page on X on mobile

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -70,6 +70,8 @@
 }
 
 .fpc-table {
+  overflow-x: auto;
+
   &--full-width {
     width: 100%;
   }
